整合Avalonia项目可运行

--- a/samples/AvaloniaSample/AvaloniaSample.csproj
+++ b/samples/AvaloniaSample/AvaloniaSample.csproj
@@ -11,9 +11,13 @@
 
   <ItemGroup>
     <AvaloniaXaml Remove="Platforms\**" />
+    <AvaloniaXaml Remove="Windows\**" />
     <Compile Remove="Platforms\**" />
+    <Compile Remove="Windows\**" />
     <EmbeddedResource Remove="Platforms\**" />
+    <EmbeddedResource Remove="Windows\**" />
     <None Remove="Platforms\**" />
+    <None Remove="Windows\**" />
   </ItemGroup>
 
   <ItemGroup>
