--- a/samples/XamarinSample/XamarinSample/XamarinSample/XamarinSample.csproj
+++ b/samples/XamarinSample/XamarinSample/XamarinSample/XamarinSample.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <IsPackable>false</IsPackable>
     <LangVersion>11.0</LangVersion>
